kubernetes/duo-server/duo-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duo-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: duo-server
  template:
    metadata:
      labels:
        app: duo-server
    spec:
      containers:
      - name: duo-server
        image: shubham22121/duo-server:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: duo-server
spec:
  type: LoadBalancer
  selector:
    app: duo-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: duo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: duo-server
            port:
              number: 80
